# ocl-learning

./: .gitignore  .ycm_extra_conf.py  README.md
SAXPY/: .gitignore  Makefile.am  configure.ac
SAXPY/doc/: README.md
SAXPY/src/: Makefile.am  saxpy.cpp
VecAdd/doc/: README.md
VecAdd/src/: Makefile  vecadd.c  vecadd.cpp
